# dewret

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yml  create_env_and_build.sh  index.html  mypy.ini  pixi.toml  pyproject.toml  recipe.yaml  render_time_examples.py  render_time_examples.yaml  render_time_function_to_import.py  rough.ipynb  rough.yaml  sitemap.xml  test.py
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improve_existing_functionality.md
.github/PULL_REQUEST_TEMPLATES/: bug_fix.md  documentation.md  feature.md
.github/issue_templates/: bug_report.md  feature_request.md  improve_existing_functionality.md  improvement.md
.github/workflows/: _build.py  docs.yml  generate_presentation_pdf.py  generate_recipe.py  publish.yml  python-static-ci.yml  python-test-ci.yml  recipe.yaml.j2
.set_up/: dev_set_up.ps1  dev_set_up.sh
conda.recipe/: recipe.yaml
docs/: comparison.md  eager_execution.md  glossary.md  overview.md  quickstart.md  renderer_tutorial.md  renderers.md  workflows.md  writing_a_workflow.md
docs/available_renderers/: index.html
docs/comparison/: index.html
docs/demos/render_time_imports/: __init__.py  import_render_class.py  import_render_function.py  import_render_function_fail.py  render_time_module.py
docs/eager_execution/: index.html
docs/glossary/: index.html
docs/notebooks/: at_render.ipynb  atrender.ipynb  fixed.ipynb  rough.ipynb  unpacking_arguments.ipynb
docs/notebooks/.md/: at_render.md  fixed.md  unpacking_arguments.md
docs/overview/: index.html
docs/quickstart/: index.html
docs/renderer_tutorial/: index.html
docs/renderers/: index.html
docs/workflows/: index.html
docs/writing_a_workflow/: index.html
example/: argo_example.py  components_pipeline.yaml  components_pipeline_with_dewret_ROOT.yaml  components_pipeline_with_dewret_pipeline-1.yaml  extra.py  kfp_example.py  kfp_example_housing.csv  kfp_example_with_dewret.py  kubeflow_config.yaml  workflow_complex.py  workflow_qs.py  workflow_tasks.py
example/nested_workflow/: workflow.yaml
example/snakemake_renderer/basic_example/: Snakefile  renderer.py  snakemake_tasks.py  snakemake_workflow.py  workflow.py  workflow.smk
example/snakemake_renderer/smk_wf/: Snakefile
presentation/: custom.css  index.html  slides.md
presentation/example/: README.md  input.yml  workflow.cwl
reference/dewret/: index.html
reference/dewret/annotations/: index.html
reference/dewret/backends/: index.html
reference/dewret/cli/: index.html
reference/dewret/core/: index.html
reference/dewret/render/: index.html
reference/dewret/renderers/: index.html
reference/dewret/tasks/: index.html
reference/dewret/utils/: index.html
reference/dewret/workflow/: index.html
resources/html/presentation/: README.md  index.html  slides.md
search/: search_index.json
src/dewret/: __init__.py  __main__.py  _cpython_mod.py  annotations.py  cli.py  core.py  data.py  render.py  tasks.py  utils.py  workflow.py
src/dewret/backends/: __init__.py  _base.py  dask.py  (+1 more)
tests/: __init__.py  test_annotations.py  test_argo.py  test_cli.py  test_configuration.py  test_cwl.py  test_dask.py  test_errors.py  test_execution.py  test_fieldable.py  test_metadata.py  test_modularity.py  test_multiresult_steps.py  test_nested.py  test_parameters.py  test_render_module.py  test_sequence_num_order.py  test_subworkflows.py  test_task_annotation.py
tests/_lib/: extra.py  frender.py  nonfrender.py  other.py  unfrender.py
(+28 files in other folders)
