[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dewret"]

[tool.portray]
modules = ["dewret"]
extra_markdown_extensions = [
  "pymdownx.inlinehilite",
  "pymdownx.snippets",
  "pymdownx.superfences",
  "pymdownx.highlight",
]

[project]
name = "dewret"
description = "DEclarative Workflow REndering Tool"
homepage = "https://github.com/flaxandteal/dewret"
repository = "https://github.com/flaxandteal/dewret"
documentation = "https://flaxandteal.github.io/dewret"
readme = "README.md"
version = "0.0.1"
authors = [
  {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
  {name = "Chris Nixon", email = "chris.nixon@sigma-sc.co.uk"},
  {name = "Ellery Ames", email = "ellery.ames@flaxandteal.co.uk"},
  {name = "Sharon Ingram", email = "sharon.ingram@flaxandteal.co.uk"},
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  'dask >= 2022',
  'pyyaml',
  'attrs',
  'click',
  'setuptools >= 65.5.1'
]
